Fri Apr 25 14:55:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_func___builtin_unreachable): try with an
	  external variable not only by a warning, which might not be
	  shown due to the optimization.  [ruby-core:61647] [Bug #9665]

Fri Apr 25 13:11:49 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: NetBSD's ksh, used by configure, needs escapes.

Fri Apr 25 12:51:08 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: correct pthread_setname_np's prototype on NetBSD.
	  [Bug #9586]

Thu Apr 24 23:17:25 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/fileutils.rb (fu_get_uid, fu_get_gid): Etc.getpwnam/getgrnam may
	  returns nil.

	* lib/webrick/utils.rb (su): ditto.

Thu Apr 24 22:55:22 2014  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/test_io.rb: Add etc.so to $" before require 'tmpdir'.

Thu Apr 24 21:09:55 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* man/ruby.1: fix broken link.

Thu Apr 24 20:53:02 2014  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb: Don't need to rescue LoadError for etc.so.

Thu Apr 24 17:39:53 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (statfs_inspect): suppress warnings.
	  assume those values won't be larger than LONG_LONG_MAX.

Thu Apr 24 11:53:28 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_initialize): SYMID on a value
	  other than Symbol is an undefined behavior.  fix up r31699.
	  [ruby-core:62142] [Bug #9771]

Thu Apr 24 11:21:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_sym2id, rb_sym2id_without_pindown): return 0 for
	  non-symbol values, for the time being.

Thu Apr 24 05:50:13 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (dsym_node_gen): like r45492, call rb_gc_resurrect().

Wed Apr 23 20:36:22 2014  Tanaka Akira  <akr@fsij.org>

	* ext/etc/extconf.rb: Build ext/etc unconditionally.

Wed Apr 23 14:10:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>
