@@ -10,11 +10,7 @@
 
 require 'socket'
 require 'fcntl'
-begin
-  require 'etc'
-rescue LoadError
-  nil
-end
+require 'etc'
 
 module WEBrick
   module Utils
@@ -41,7 +37,7 @@ module WEBrick
     ##
     # Changes the process's uid and gid to the ones of +user+
     def su(user)
-      if defined?(Etc) && (pw = Etc.getpwnam(user))
+      if pw = Etc.getpwnam(user)
         Process::initgroups(user, pw.gid)
         Process::Sys::setgid(pw.gid)
         Process::Sys::setuid(pw.uid)
